2013-11-25  Julien Bect  <julien.bect@supelec.fr>

	Fix a bug in stk_path.

	* misc/config/stk_path.m: modified

2013-11-24  Julien Bect  <julien.bect@supelec.fr>

	Fix a typo (missing parenthesis) in stk_rescale.

	* utils/arrays/generic/stk_rescale.m: modified

	Fix a copy-paste typo in stk_path.

	* misc/config/stk_path.m: modified

	Increase test tolerance.

	* misc/distrib/distrib_student_cdf.m: modified

	Provide a replacement for graphics_toolkit in Matlab.

	* misc/mole/matlab/graphics_toolkit.m: modified

	Remove the legend in example 'misc02' if using gnuplot.

	* examples/03_miscellaneous/stk_example_misc02.m: modified

	Choose a slightly less singular example for 'doe03'.

	* examples/02_design_of_experiments/stk_example_doe03.m: modified

	Fix stk_select_optimizer: sqp is in Octave core.

	* misc/config/stk_select_optimizer.m: modified

	Add documentation for stk_select_optimizer.

	* misc/config/stk_select_optimizer.m: modified

2013-11-22  Julien Bect  <julien.bect@supelec.fr>

	Add a new example.

	* examples/01_kriging_basics/stk_example_kb07.m: new script

2013-11-19  Julien Bect  <julien.bect@supelec.fr>

	Change plot options in example 'doe01'.

	* examples/02_design_of_experiments/stk_example_doe01.m: modified

	Add a smoke test of all examples.

	* misc/test/stk_runexamples.m: modified

2013-11-18  Julien Bect  <julien.bect@supelec.fr>

	Remove TRUE_NOISE_STD in example 'kb03'.

	* examples/01_kriging_basics/stk_example_kb03.m: modified

	Use the variance returned by stk_param_init for noiseless data.

	* examples/01_kriging_basics/stk_example_kb02.m: modified
	* examples/01_kriging_basics/stk_example_kb03.m: modified

2013-11-15  Julien Bect  <julien.bect@supelec.fr>

	Remove stk_plot1dsim.

	* misc/plot/stk_plot1dsim.m: removed
	* misc/plot/stk_plot1d.m: modified
	* examples/01_kriging_basics/stk_example_kb05.m: modified

2013-11-14  Julien Bect  <julien.bect@supelec.fr>

	Rewrite one-line descriptions of all examples.
